--- a/FinancialApp/www/css/index.css
+++ b/FinancialApp/www/css/index.css
@@ -1,81 +1,90 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
 * {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+    box-sizing: border-box;
 }
 
 body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#E4E4E4;
-    background-image:linear-gradient(to bottom, #A7A7A7 0%, #E4E4E4 51%);
     font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
     font-size:12px;
-    height:100vh;
-    margin:0px;
-    padding:0px;
-    /* Padding to avoid the "unsafe" areas behind notches in the screen */
-    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
-    text-transform:uppercase;
-    width:100%;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
 }
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+    /* border: 1px solid black; */
 }
 
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
-    }
+.container {
+    width: 90%;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid green; */
+    position: relative;
 }
 
-h1 {
-    font-size:24px;
-    font-weight:normal;
-    margin:0px;
-    overflow:visible;
-    padding:0px;
+.logo {
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    /* border: 1px solid red; */
+    height: 140px;
+}
+
+.signIn {
+    position: absolute;
+    top: 40px;
+    right: 10px;
+    font-size: 20px; 
+    cursor: pointer; 
+}
+
+.wrapper {
+    /* border: 1px solid blue; */
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: aliceblue;
+    width: 90%;
+    overflow: hidden;
+    margin-top: 100px;
+    box-shadow: -4px 11px 14px 0px rgba(0,0,0,0.34);
+    -webkit-box-shadow: -4px 11px 14px 0px rgba(0,0,0,0.34);
+    -moz-box-shadow: -4px 11px 14px 0px rgba(0,0,0,0.34);
+}
+
+.sub-h1 {
+    font-size:30px;
+    font-weight: 700;
+    /* border: 1px solid red; */
+    margin:20px 0;
+    padding:0;
     text-align:center;
+}
+
+.blink {
+    animation:fade 3000ms infinite;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
 }
 
 .event {
-    border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
+    border-radius:3px;
+    color:#fff;
+    font-size:13px;
+    margin:5px;
+    padding:2px 2.5px;
 }
 
 .event.listening {
@@ -86,25 +95,63 @@ h1 {
 .event.received {
     background-color:#4B946A;
     display:none;
+    margin-bottom: 20px;
 }
 
 #deviceready.ready .event.listening { display: none; }
 #deviceready.ready .event.received { display: block; }
 
+.sub-wrapper {
+    padding-top: 10px;
+    /* border: 1px solid green; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-evenly;
+    margin-bottom: 30px;
+}
+
+.wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#text1,
+#text2,
+#text3,
+#text4 {
+    max-width: 100%;
+    text-align: center;
+}
+
+#button2,
+#button3,
+#button4 {
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    color: #000;
+    padding: 5px;
+}
+
+@media screen and (max-width: 600px) {
+    .sub-h1 {
+        font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .sub-wrapper {
+        flex-flow: row nowrap;
+    }
+}
+
 @keyframes fade {
     from { opacity: 1.0; }
-    50% { opacity: 0.4; }
+    50% { opacity: 0.6; }
     to { opacity: 1.0; }
-}
-
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
-}
-
-
-@media screen and (prefers-color-scheme: dark) {
-    body {
-        background-image:linear-gradient(to bottom, #585858 0%, #1B1B1B 51%);
-    }
 }
